[package]
name = "cs-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
# Iter 11: default-on. Forward the countable-memory feature down
# to cs-gc so consumer crates inherit transparently. Adds
# parallel CycleVisit impls alongside the existing Trace impls
# under the same #[cfg].
default = ["countable-memory", "regions"]
countable-memory = ["cs-gc/countable-memory"]
# Forwards the cs-gc `regions` feature so the layer-3 (region
# memory) Promote trait + deep-promotion machinery is
# available on Value. Region-memory spec iter 6 flipped this
# default-on.
regions = ["cs-gc/regions"]
# Forwards the cs-gc `tracing-cycle-collector` feature so
# embedders can opt in to the layer-4 sweep through cs-core.
tracing-cycle-collector = ["cs-gc/tracing-cycle-collector"]

[dependencies]
cs-diag = { workspace = true }
cs-gc = { workspace = true }
num-bigint = { workspace = true }
num-rational = { workspace = true }
num-traits = { workspace = true }
