[package]
name = "cs-gc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CrabScheme precise tracing garbage collector"

[features]
# Iter 11 of the countable-memory spec flips this on by default.
# The Rc-backed `Gc<T>` representation + synchronous cycle-
# collector (`cs_gc::cycle`) is the production path. Disable with
# `--no-default-features` to fall back to the M5 Phase 1 tracing
# infrastructure (`Heap`, `Trace`, `Marker`, mark-sweep
# `collect()`) — that path stays available for rollback / parity
# verification until iter 12 deletes it. See
# `.spec-workflow/specs/countable-memory/` for the migration plan.
default = ["countable-memory"]
countable-memory = []
# Layer 3 of the unified memory management architecture
# (ADR 0015). Adds `cs_gc::Region` — a bump arena whose
# allocations bulk-free when the region drops. Off by default
# in iters 1-5 of the region-memory spec; iter 6 flips on.
regions = ["dep:bumpalo"]

[dependencies]
bumpalo = { workspace = true, optional = true }
