[package]
name = "cs-jit-cranelift"
version = "0.0.1"
edition = "2021"
publish = false

description = "CrabScheme JIT backend lowering cs-rir to Cranelift IR and native code."

[dependencies]
cs-core = { path = "../cs-core" }
cs-rir = { path = "../cs-rir" }
cs-jit = { path = "../cs-jit" }

# Cranelift — codegen + frontend + JIT module + module trait. Bump
# in lockstep per ADR 0007 D-9. Iter 2 picks 0.131 (latest stable
# at the time of M5b → M6 handoff).
cranelift-codegen = { workspace = true }
cranelift-frontend = { workspace = true }
cranelift-jit = { workspace = true }
cranelift-module = { workspace = true }
cranelift-native = { workspace = true }
