[package]
name = "cs-jit-cranelift"
version = "0.0.1"
edition = "2021"
publish = false

description = "CrabScheme JIT backend lowering cs-rir to Cranelift IR and native code."

[dependencies]
cs-core = { path = "../cs-core" }
cs-rir = { path = "../cs-rir" }
cs-jit = { path = "../cs-jit" }
cs-vm = { path = "../cs-vm" }

# Cranelift — codegen + frontend + JIT module + module trait. Bump
# in lockstep per ADR 0007 D-9. Iter 2 picks 0.131 (latest stable
# at the time of M5b → M6 handoff).
cranelift-codegen = { workspace = true }
cranelift-frontend = { workspace = true }
cranelift-jit = { workspace = true }
cranelift-module = { workspace = true }
cranelift-native = { workspace = true }

[dev-dependencies]
cs-diag = { workspace = true }
cs-vm = { workspace = true }

[features]
# Expose internal testing helpers (RIR builders, golden fixtures) to
# downstream test crates. The `cfg(any(test, feature = "test-helpers"))`
# gate inside lowering.rs makes the `testing` module visible to both
# our own unit tests and to integration crates that opt in.
test-helpers = []
# Layer 3 — Inst::ConsRegion lowering. Pulls in cs-vm's regions
# feature so the JIT can reference `vm_alloc_pair_region_gc`.
# Off by default; consumers (cs-runtime with `regions` on) opt in.
regions = ["cs-vm/regions"]
