[package]
name = "cs-lsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Language Server Protocol server for CrabScheme (.scm) source."

[dependencies]
# LSP framework: JSON-RPC framing, async dispatch, lsp_types re-export.
tower-lsp = "0.20"
# `io-std` adds tokio::io::{stdin,stdout} for the stdio transport (the
# workspace tokio features don't include it).
tokio = { workspace = true, features = ["io-std"] }
dashmap = { workspace = true }
# Front-end reuse: parse + expand for diagnostics, source-map for
# span→line/col. No codegen deps — the LSP only inspects source.
cs-diag = { workspace = true }
cs-core = { workspace = true }
cs-parse = { workspace = true }
cs-expand = { workspace = true }

[[bin]]
name = "crabscheme-lsp"
path = "src/bin/crabscheme-lsp.rs"

[dev-dependencies]
# `ServiceExt::ready` for driving the LspService in-process in tests.
tower = { version = "0.4", features = ["util"] }
serde_json = "1"

