[package]
name = "cs-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
# M10 Track W iter 1 + closeout — feature flags so the runtime can
# build for targets that don't support runtime native codegen (WASM)
# or dynamic library loading (WASM, sandboxed embeds).
#
# `default` keeps the native build's surface identical to pre-M10.
# `--no-default-features` produces a minimal runtime suitable for
# wasm32-wasip1.
# Layer 2 (Rc-backed Gc<T> + synchronous cycle detector) is
# unconditional after countable-memory iter 12b — ADR 0014.
default = ["jit", "ffi-dynamic", "regions", "stdlib"]
# Enables `cs-jit*` deps and `Runtime::install_jit` / `jit_lowerer`.
# Disabled in WASM and AOT-binary builds (which inline their codegen
# at build time instead of at runtime).
jit = ["dep:cs-jit", "dep:cs-jit-cranelift"]
# Enables the `cs-ffi` trait surface (HostProcedure, RuntimeFfi ABI
# types) and `Runtime::register_host_procedure`. Pure Rust; portable
# to WASM. A WASM embedder that wants custom Scheme builtins
# implemented in Rust enables `ffi-trait` but skips `ffi-dynamic`.
ffi-trait = ["dep:cs-ffi"]
# Enables dynamic shared-library loading: `(load-shared-library)`,
# `RuntimeFfiContext` (the dlopen-time C-ABI context), the `CAbiProc`
# wrapper adapting C-ABI plugins to the HostProcedure trait. Requires
# `libloading::Library::new` which is unavailable on WASM (no
# `dlopen`). Implies `ffi-trait`.
ffi-dynamic = ["ffi-trait", "dep:libloading"]
# Convenience alias preserving the pre-closeout name. Equivalent to
# enabling both `ffi-trait` and `ffi-dynamic`. Kept so external Rust
# embedders that wrote `features = ["ffi"]` against the W1 API stay
# building.
ffi = ["ffi-dynamic"]
# Forwards the cs-gc `regions` feature so layer-3 (region memory)
# APIs (`Region`, `Gc::new_in`, `Promote::promote_deep`) are
# available in runtime contexts. Region-memory spec iter 6
# flipped this default-on.
regions = [
    "cs-core/regions",
    "cs-gc/regions",
    "cs-vm/regions",
    "cs-jit-cranelift?/regions",
]
# Forwards the cs-gc `tracing-cycle-collector` feature
# (layer 4 of the unified memory architecture). Off by
# default; opt in for embedders that want a residual-cycle
# sweep on top of the layer-2 synchronous detector.
tracing-cycle-collector = [
    "cs-core/tracing-cycle-collector",
    "cs-gc/tracing-cycle-collector",
    "cs-vm/tracing-cycle-collector",
]
# BEAM-style actor primops. Pulls in cs-actor + cs-table + cs-hotreload
# (tokio, dashmap) and registers (spawn, send, raw-receive, self),
# the cs-table CRUD, and the cs-hotreload version-table primops as
# Scheme builtins. Disabled on WASM (tokio's rt-multi-thread needs
# real threads) and on bare-AOT builds. The `lib/beam/prelude.scm`
# library only loads when this feature is on.
actor = ["dep:cs-actor", "dep:cs-table", "dep:cs-hotreload"]
# ADR 0015 L2 — WASM-instance sandbox builtins. Pulls in
# cs-sandbox-wasm + wasmtime. Default off because the wasmtime
# dep is ~30s of compile time and not useful for non-sandbox
# builds.
sandbox = ["dep:cs-sandbox-wasm"]

# ----- (crab …) stdlib modules — see .spec-workflow/specs/stdlib-modules
#
# `stdlib` is the umbrella: every Tier-1/2/3 module compiled in.
# Per-module flags (`stdlib-path`, `stdlib-fs`, …) toggle individual
# crates so embedders can build subset distributions. Each per-module
# flag implies `ffi-trait` because registration goes through
# `register_host_procedure`.
stdlib = [
    "stdlib-path",
    "stdlib-fs",
    "stdlib-os",
    "stdlib-process",
    "stdlib-string",
    "stdlib-format",
    "stdlib-regex",
    "stdlib-time",
    "stdlib-random",
    "stdlib-uuid",
    "stdlib-json",
    "stdlib-csv",
    "stdlib-toml",
    "stdlib-base",
    "stdlib-url",
    "stdlib-hash",
    "stdlib-compress",
    "stdlib-deflate",
    "stdlib-archive",
    "stdlib-log",
    "stdlib-metrics",
    "stdlib-net",
    "stdlib-http",
    "stdlib-websocket",
    "stdlib-collection",
    "stdlib-math",
    "stdlib-tty",
    "stdlib-signal",
    "stdlib-meta",
]
# Each `stdlib-<name>` feature also enables the matching
# `cs-stdlib-meta?/meta-<name>` flag (via the `?` optional-dep
# syntax) so `(crab-list-modules)` reflects whatever's compiled
# in, even on subset builds. cs-stdlib-meta itself is optional;
# the `stdlib` umbrella turns it on by default.
stdlib-meta = ["ffi-trait", "dep:cs-stdlib-meta"]
stdlib-path = ["ffi-trait", "dep:cs-stdlib-path", "cs-stdlib-meta?/meta-path"]
stdlib-fs = ["ffi-trait", "dep:cs-stdlib-fs", "cs-stdlib-meta?/meta-fs"]
stdlib-os = ["ffi-trait", "dep:cs-stdlib-os", "cs-stdlib-meta?/meta-os"]
stdlib-process = ["ffi-trait", "dep:cs-stdlib-process", "cs-stdlib-meta?/meta-process"]
stdlib-string = ["ffi-trait", "dep:cs-stdlib-string", "cs-stdlib-meta?/meta-string"]
stdlib-format = ["ffi-trait", "dep:cs-stdlib-format", "cs-stdlib-meta?/meta-format"]
stdlib-regex = ["ffi-trait", "dep:cs-stdlib-regex", "cs-stdlib-meta?/meta-regex"]
stdlib-time = ["ffi-trait", "dep:cs-stdlib-time", "cs-stdlib-meta?/meta-time"]
stdlib-random = ["ffi-trait", "dep:cs-stdlib-random", "cs-stdlib-meta?/meta-random"]
stdlib-uuid = ["ffi-trait", "dep:cs-stdlib-uuid", "cs-stdlib-meta?/meta-uuid"]
stdlib-json = ["ffi-trait", "dep:cs-stdlib-json", "cs-stdlib-meta?/meta-json"]
stdlib-csv = ["ffi-trait", "dep:cs-stdlib-csv", "cs-stdlib-meta?/meta-csv"]
stdlib-toml = ["ffi-trait", "dep:cs-stdlib-toml", "cs-stdlib-meta?/meta-toml"]
stdlib-base = ["ffi-trait", "dep:cs-stdlib-base", "cs-stdlib-meta?/meta-base"]
stdlib-url = ["ffi-trait", "dep:cs-stdlib-url", "cs-stdlib-meta?/meta-url"]
stdlib-hash = ["ffi-trait", "dep:cs-stdlib-hash", "cs-stdlib-meta?/meta-hash"]
stdlib-compress = ["ffi-trait", "dep:cs-stdlib-compress", "cs-stdlib-meta?/meta-compress"]
stdlib-deflate = ["ffi-trait", "dep:cs-stdlib-deflate", "cs-stdlib-meta?/meta-deflate"]
stdlib-archive = ["ffi-trait", "dep:cs-stdlib-archive", "cs-stdlib-meta?/meta-archive"]
stdlib-log = ["ffi-trait", "dep:cs-stdlib-log", "cs-stdlib-meta?/meta-log"]
stdlib-metrics = ["ffi-trait", "dep:cs-stdlib-metrics", "cs-stdlib-meta?/meta-metrics"]
stdlib-net = ["ffi-trait", "dep:cs-stdlib-net", "cs-stdlib-meta?/meta-net"]
stdlib-http = ["ffi-trait", "dep:cs-stdlib-http", "cs-stdlib-meta?/meta-http"]
stdlib-websocket = ["ffi-trait", "dep:cs-stdlib-websocket", "cs-stdlib-meta?/meta-websocket"]
stdlib-collection = ["ffi-trait", "dep:cs-stdlib-collection", "cs-stdlib-meta?/meta-collection"]
stdlib-math = ["ffi-trait", "dep:cs-stdlib-math", "cs-stdlib-meta?/meta-math"]
stdlib-tty = ["ffi-trait", "dep:cs-stdlib-tty", "cs-stdlib-meta?/meta-tty"]
stdlib-signal = ["ffi-trait", "dep:cs-stdlib-signal", "cs-stdlib-meta?/meta-signal"]

[dependencies]
cs-core = { workspace = true }
cs-diag = { workspace = true }
cs-expand = { workspace = true }
cs-ffi = { workspace = true, optional = true }
cs-gc = { workspace = true }
cs-ir = { workspace = true }
cs-lex = { workspace = true }
# ADR 0014 — optimizer-pass framework. cs-runtime registers the
# shipped builtin passes at Runtime::new() and exposes Scheme
# builtins (install-optimizer-pass!, etc.) that mutate cs-opt's
# thread-local active-pass list.
cs-opt = { workspace = true }
# Phase 5.4: typer-derived param hints. cs-rir's `Type` is the
# vocabulary the JIT translator consumes, so the Runtime needs
# the alias to accept hints from external callers (cs-cli, etc.).
cs-rir = { workspace = true }
cs-parse = { workspace = true }
cs-vm = { workspace = true }
cs-jit = { workspace = true, optional = true }
cs-jit-cranelift = { workspace = true, optional = true }
libloading = { workspace = true, optional = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
cs-actor = { workspace = true, optional = true }
cs-table = { workspace = true, optional = true }
cs-hotreload = { workspace = true, optional = true }
cs-sandbox-wasm = { workspace = true, optional = true }
cs-stdlib-path = { workspace = true, optional = true }
cs-stdlib-fs = { workspace = true, optional = true }
cs-stdlib-os = { workspace = true, optional = true }
cs-stdlib-process = { workspace = true, optional = true }
cs-stdlib-string = { workspace = true, optional = true }
cs-stdlib-format = { workspace = true, optional = true }
cs-stdlib-regex = { workspace = true, optional = true }
cs-stdlib-time = { workspace = true, optional = true }
cs-stdlib-random = { workspace = true, optional = true }
cs-stdlib-uuid = { workspace = true, optional = true }
cs-stdlib-json = { workspace = true, optional = true }
cs-stdlib-csv = { workspace = true, optional = true }
cs-stdlib-toml = { workspace = true, optional = true }
cs-stdlib-base = { workspace = true, optional = true }
cs-stdlib-url = { workspace = true, optional = true }
cs-stdlib-hash = { workspace = true, optional = true }
cs-stdlib-compress = { workspace = true, optional = true }
cs-stdlib-deflate = { workspace = true, optional = true }
cs-stdlib-archive = { workspace = true, optional = true }
cs-stdlib-log = { workspace = true, optional = true }
cs-stdlib-metrics = { workspace = true, optional = true }
cs-stdlib-net = { workspace = true, optional = true }
cs-stdlib-http = { workspace = true, optional = true }
cs-stdlib-websocket = { workspace = true, optional = true }
cs-stdlib-collection = { workspace = true, optional = true }
cs-stdlib-math = { workspace = true, optional = true }
cs-stdlib-tty = { workspace = true, optional = true }
cs-stdlib-signal = { workspace = true, optional = true }
cs-stdlib-meta = { workspace = true, optional = true }

[dev-dependencies]
# Tests for the ADR 0014 Scheme surface call clear_active_passes
# to isolate test-to-test thread-local state. Production code
# never needs to import cs-opt directly.
cs-ffi-example = { workspace = true }
cs-ffi-macros = { workspace = true }
cs-opt = { workspace = true }

